# py-example-opentelemetry

./: .gitignore  Dockerfile.api  Dockerfile.client  README.md  docker-compose.yml  main.py  prometheus.yaml  prometheus.yml  pyproject.toml  tempo.yml  wait-for-it.sh
.github/instructions/: spec.instructions.md
api/: __init__.py  config.py  main.py
client/: __init__.py  config.py  main.py
grafana/provisioning/datasources/: datasources.yml
tests/: test_api.py  test_client.py
